feat(docs): update asgardian path

--- a/apps/docs/content/api-reference.mdx
+++ b/apps/docs/content/api-reference.mdx
@@ -29,7 +29,7 @@ An instance of the `Ability` class.
 #### Example
 
 ```ts
-import { createAbility } from 'asgardian';
+import { createAbility } from '@nordic-ui/asgardian';
 
 const ability = createAbility();
 ```
