--- a/apps/docs/content/docs/chained-api.mdx
+++ b/apps/docs/content/docs/chained-api.mdx
@@ -19,7 +19,7 @@ Let's start with basic examples of how to use the chained API to define simple r
 You can define rules using the `can` and `cannot` methods in a chained manner.
 
 ```typescript
-import { createAbility } from 'asgardian';
+import { createAbility } from '@nordic-ui/asgardian';
 
 const ability = createAbility();
 
