--- a/apps/docs/content/docs/role-based-permissions.mdx
+++ b/apps/docs/content/docs/role-based-permissions.mdx
@@ -15,7 +15,7 @@ Roles are a way to group permissions together. You can define roles and assign t
 You can define roles using a simple structure. Typically, roles are defined as strings or objects.
 
 ```ts
-import { createAbility } from 'asgardian';
+import { createAbility } from '@nordic-ui/asgardian';
 
 const ability = createAbility();
 
@@ -75,7 +75,7 @@ Here is a complete example that demonstrates how to define and check role-based 
 ### Define Roles and Rules
 
 ```ts
-import { createAbility } from 'asgardian';
+import { createAbility } from '@nordic-ui/asgardian';
 
 const ability = createAbility();
 
