--- a/apps/docs/content/docs/rules-and-conditions.mdx
+++ b/apps/docs/content/docs/rules-and-conditions.mdx
@@ -16,7 +16,7 @@ Rules in Asgardian are defined using the `can` and `cannot` methods. These metho
 The `can` method is used to define permissions that a user can perform.
 
 ```ts
-import { createAbility } from 'asgardian';
+import { createAbility } from '@nordic-ui/asgardian';
 
 const ability = createAbility();
 
