--- a/apps/docs/content/index.mdx
+++ b/apps/docs/content/index.mdx
@@ -34,7 +34,7 @@ Here's a simple example to get you started with Asgardian.
 ### Defining Rules
 
 ```ts
-import { createAbility } from 'asgardian';
+import { createAbility } from '@nordic-ui/asgardian';
 
 const ability = createAbility();
 
