--- a/apps/docs/content/faq.mdx
+++ b/apps/docs/content/faq.mdx
@@ -15,7 +15,7 @@ Asgardian is a powerful and flexible permission management library for JavaScrip
 
 ### How do I install Asgardian?
 
-You can install Asgardian using npm or yarn:
+You can install Asgardian using your package manager of choice:
 
 ```sh npm2yarn
 npm i @nordic-ui/asgardian
