--- a/apps/docs/content/code-of-conduct.mdx
+++ b/apps/docs/content/code-of-conduct.mdx
@@ -42,7 +42,7 @@ This Code of Conduct applies both within project spaces and in public spaces whe
 
 ## Enforcement
 
-Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the project team at [support@asgardian.com](mailto:support@asgardian.com). All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances. The project team is obligated to maintain confidentiality with regard to the reporter of an incident.
+Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the project team at [kevin+asgardian@oesterkilde.dk](mailto:kevin+asgardian@oesterkilde.dk). All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances. The project team is obligated to maintain confidentiality with regard to the reporter of an incident.
 
 All project maintainers are obligated to follow the [GitHub Terms of Service](https://docs.github.com/en/site-policy/github-terms/github-terms-of-service) and [GitHub Community Guidelines](https://docs.github.com/en/site-policy/github-community-guidelines/github-community-guidelines).
 
@@ -52,7 +52,7 @@ This Code of Conduct is adapted from the [Contributor Covenant](https://www.cont
 
 ## Contact
 
-If you have any questions or concerns about this Code of Conduct, you can reach out to the Asgardian team at [support@asgardian.com](mailto:support@asgardian.com).
+If you have any questions or concerns about this Code of Conduct, you can reach out to the Asgardian team at [kevin+asgardian@oesterkilde.dk](mailto:kevin+asgardian@oesterkilde.dk).
 
 > [!TIP]
 >
